--- a/index2.html
+++ b/index2.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Քոլատակ</title>
     <link rel="stylesheet" href="/css/style2.css">
+    <link rel="shortout icon" type="image/x-icon" href="/img/logo.png">
 </head>
 <body>
     <div class="box-area">
