--- a/index3.html
+++ b/index3.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Location Map</title>
     <link rel="stylesheet" href="/css/style3.css">
+    <link rel="shortout icon" type="image/x-icon" href="/img/logo.png">
 </head>
 <body>
     <div class="container">
