--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
             <img src="/img/logo4.png" class="logo" >
             <nav>
                 <ul>
-                    <li><a href="index.html">HOME</a></li>
-                    <li><a href="index3.html">Location</a></li>
-                    <li><a href="#">Contact</a></li>
+                    <li><a href="index.html">ՏՈՒՆ</a></li>
+                    <li><a href="index3.html">ՏԱՐԱԾՔԸ</a></li>
+                    <li><a href="#">ՀԵՏԱԴԱՐՁ ԿԱՊ</a></li>
                 </ul>
             </nav>
         </div>
@@ -39,7 +39,7 @@
                 <p> Քոլատակ գյուղը գտնվում է Արցախի Մարտակերտի<br> շրջանում
                     Բնակչությունը հիմնականում<br> զբաղվում է գյուղատնտեսությամբ
                 </p>
-                <a href="index1.html"><button type="button">more<br>information</button></a>
+                <a href="index1.html"><button type="button">ԱՎԵԼԻՆ</button></a>
             </div>
            <div id="slider">
             <ul id="slideWrap"> 
