--- a/index1.html
+++ b/index1.html
@@ -18,9 +18,9 @@
                     </a>
                 </div>    
                 <nav>
-                    <a href="index.html">Home</a>
-                    <a href="index3.html">Location</a>
-                    <a href="#">Contact</a> 
+                    <a href="index.html">ՏՈՒՆ</a>
+                    <a href="index3.html">ՏԱՐԱԾՔԸ</a>
+                    <a href="#">ՀԵՏԱԴԱՐՁ ԿԱՊ</a> 
                     <a href="index2.html"><img src="/img/button1.png" class="button"></a>
                 </nav>
                 
@@ -30,7 +30,6 @@
             <h2>Հակոբավանք</h2>
         </div>
         <div class="content-area">
-            <div class="wrapper">
                 <h2>Հակոբավանքի մասին</h2>
                 <p> 
                     Հակոբավանք, հայկական վանական համալիր, որը գտնվում է Մեծ Հայքի Արցախ նահանգի Մեծ Առանք (հետագայում կոչվել է նաև Ներքին Խաչեն) գավառում։
@@ -40,7 +39,6 @@
                     գտնվում է Երևանի Մաշտոցի անվան Մատենադարանի մի հիշատակարանում։ Այստեղ մագաղաթում գրված է այն մասին, որ Սուրբ Հակոբա վանքի եկեղեցու կառուցողները
                     եղել են Հասան–Ջալալի ծնողները՝ Վախտանգն ու Խորիշահը։
                 </p>
-            </div>
         </div>
     </div>
 </body>
