--- a/index2.html
+++ b/index2.html
@@ -18,9 +18,9 @@
                     </a>
                 </div>    
                 <nav>
-                    <a href="index.html">Home</a>
-                    <a href="index3.html">Location</a>
-                    <a href="#">Contact</a> 
+                    <a href="index.html">ՏՈՒՆ</a>
+                    <a href="index3.html">ՏԱՐԱԾՔԸ</a>
+                    <a href="#">ՀԵՏԱԴԱՐՁ ԿԱՊ</a> 
                 </nav>
                 
             </div>
